// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. page error 1`] = `
.c2 {
  display: block;
  opacity: 1;
  position: absolute;
  -webkit-transition: opacity 0.3s ease-in-out;
  transition: opacity 0.3s ease-in-out;
  width: 100%;
  z-index: 2;
}

.c0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-left: 10%;
  padding-right: 10%;
  padding-top: 10%;
}

.c1 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 300px;
  width: 100%;
}

@media (min-width:768px) {
  .c0 {
    padding-left: 15%;
    padding-right: 15%;
  }
}

@media (min-width:1024px) {
  .c0 {
    -webkit-flex-direction: row-reverse;
    -ms-flex-direction: row-reverse;
    flex-direction: row-reverse;
  }
}

@media (min-width:768px) {
  .c1 {
    max-width: 428px;
  }
}

@media (min-width:1024px) {
  .c1 {
    max-width: none;
    width: 50%;
  }
}

@media (min-width:1024px) {
  .c3 {
    -webkit-align-self: center;
    -ms-flex-item-align: center;
    align-self: center;
    max-width: 428px;
  }
}

<style>
.S1 {
  -ms-flex-align: stretch;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  align-items: stretch;
  border-top-width: 0px;
  border-bottom-width: 0px;
  -ms-flex-direction: column;
  -webkit-box-direction: normal;
  -webkit-box-orient: vertical;
  -webkit-flex-direction: column;
  flex-direction: column;
  margin-top: 0px;
  margin-right: 0px;
  margin-bottom: 0px;
  margin-left: 0px;
  min-height: 0px;
  padding-top: 0px;
  padding-bottom: 0px;
  position: relative;
}

.S2 {
  -ms-flex-align: stretch;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  align-items: stretch;
  border-top-width: 0px;
  border-bottom-width: 0px;
  bottom: 0px;
  -ms-flex-direction: column;
  -webkit-box-direction: normal;
  -webkit-box-orient: vertical;
  -webkit-flex-direction: column;
  flex-direction: column;
  margin-top: 0px;
  margin-right: 0px;
  margin-bottom: 0px;
  margin-left: 0px;
  min-height: 0px;
  padding-top: 0px;
  padding-bottom: 0px;
  position: absolute;
  right: 0px;
}

.S3 {
  -ms-flex-item-align: center;
  -webkit-align-self: center;
  align-self: center;
  border-top-width: 0px;
  border-bottom-width: 0px;
  color: rgba(29,29,27,1.00);
  font-family: TimesModern-Bold;
  font-size: 26px;
  margin-right: 0px;
  margin-left: 0px;
  margin-bottom: 10px;
  margin-top: 20px;
  padding-top: 0px;
  padding-bottom: 0px;
  text-align: center;
}

.S4 {
  border-top-width: 0px;
  border-bottom-width: 0px;
  color: rgba(105,105,105,1.00);
  font-family: TimesDigitalW04-Regular;
  font-size: 18px;
  margin-top: 0px;
  margin-right: 0px;
  margin-bottom: 0px;
  margin-left: 0px;
  padding-top: 0px;
  padding-bottom: 0px;
  text-align: center;
}

.IS1 {
  background-image: linear-gradient(264deg, #F9F9F9 0%, #EDEDED 100%);
}

.IS2 {
  display: table;
  height: 0;
  overflow: hidden;
  padding-bottom: 110%;
}

.IS3 {
  align-self: center;
  margin-bottom: 10px;
  margin-top: 40px;
}
</style>

<div
  className="c0 S1"
>
  <div
    className="c1 S1"
  >
    <div
      className="S1"
    >
      <div
        className="IS2"
      >
        <img
          className="c2"
        />
        <div
          className="S2"
        >
          <div
            className="S1 IS1"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="c3 S1"
  >
    <div
      className="S3"
    >
      Something's gone wrong
    </div>
    <div
      className="S4"
    >
      We can't load the page you have requested. Please check your network connection and retry to continue
    </div>
    <Button
      className="IS3"
    />
  </div>
</div>
`;

exports[`2. article list 1`] = `
.c0 {
  margin: 0 auto;
  max-width: 680px;
  width: 100%;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 50px;
}

.c3 {
  border-style: solid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  height: 50px;
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1px;
  border-top-color: #DBDBDB;
  border-top-width: 1px;
}

.c6 {
  border-style: solid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  height: 50px;
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1px;
  border-top-color: #DBDBDB;
  border-top-width: 1px;
}

.c1 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c5 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c4 {
  padding-left: 10px;
  padding-right: 10px;
}

@media (min-width:768px) {
  .c0 {
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1320px) {
  .c0 {
    max-width: 760px;
  }
}

@media (min-width:768px) {
  .c2 {
    left: 0;
    right: 0;
    position: absolute;
  }
}

@media (min-width:768px) {
  .c3 {
    border-top-width: 0px;
  }
}

@media (min-width:768px) {
  .c1 {
    margin-top: 30px;
  }
}

@media (min-width:768px) {
  .c4 {
    padding-left: 0;
    padding-right: 0;
  }
}

<style>
.S1 {
  border-top-width: 0px;
  border-bottom-width: 0px;
  color: rgba(105,105,105,1.00);
  font-family: GillSansMTStd-Medium;
  font-size: 15px;
  margin-top: 0px;
  margin-right: 0px;
  margin-bottom: 0px;
  margin-left: 0px;
  padding-bottom: 0px;
  padding-top: 4px;
}

.S2 {
  -ms-flex-align: stretch;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  align-items: stretch;
  border-top-width: 0px;
  border-bottom-width: 0px;
  -ms-flex-direction: column;
  -webkit-box-direction: normal;
  -webkit-box-orient: vertical;
  -webkit-flex-direction: column;
  flex-direction: column;
  margin-top: 0px;
  margin-right: 0px;
  margin-bottom: 0px;
  margin-left: 0px;
  min-height: 0px;
  padding-top: 0px;
  padding-bottom: 0px;
  position: relative;
}

.S3 {
  -ms-flex-align: stretch;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  align-items: stretch;
  border-top-width: 0px;
  border-bottom-width: 0px;
  -ms-flex-direction: column;
  -webkit-box-direction: normal;
  -webkit-box-orient: vertical;
  -webkit-flex-direction: column;
  flex-direction: column;
  margin-top: 0px;
  margin-right: 0px;
  margin-bottom: 0px;
  margin-left: 0px;
  max-width: 760px;
  min-height: 0px;
  padding-top: 0px;
  padding-bottom: 0px;
  position: relative;
}

.S4 {
  -ms-flex-align: stretch;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  align-items: stretch;
  border-top-width: 0px;
  border-bottom-width: 0px;
  -ms-flex-direction: row;
  -webkit-box-direction: normal;
  -webkit-box-orient: horizontal;
  -webkit-flex-direction: row;
  flex-direction: row;
  -ms-flex-pack: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-top: 0px;
  margin-right: 0px;
  margin-bottom: 0px;
  margin-left: 0px;
  min-height: 0px;
  padding-top: 0px;
  padding-bottom: 0px;
  position: relative;
}
</style>

<div
  className="S2"
>
  <div
    className="S2"
  >
    <div
      className="c0 S2"
    >
      <div
        className="S4"
      >
        <div
          className="S3"
        >
          <div
            className="c1 S2"
          >
            <div
              className="c2 S2"
            >
              <div
                className="S1"
              >
                Showing 0 - 0 of 0 results
              </div>
            </div>
            <div
              className="c3 S2"
            >
              <div
                className="c4 S2"
              />
              <div
                className="c4 S2"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        className="c0 S2"
      >
        ArticleListItem
      </div>
    </div>
    <div />
    <div
      className="S4"
    >
      <div
        className="S3"
      >
        <div
          className="c5 S2"
        >
          <div
            className="c6 S2"
          >
            <div
              className="c4 S2"
            />
            <div
              className="c4 S2"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
